<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        app:elevation="@dimen/app_toolbar_elevation"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            app:indicatorSize="@dimen/progress_width"
            android:max="30"
            app:trackThickness="@dimen/timer_track_width"
            app:trackColor="@color/tracker_color"
            android:visibility="gone"
            app:showAnimationBehavior="inward"
            app:hideAnimationBehavior="outward"
            app:trackCornerRadius="@dimen/corner_radius_value"/>

        <TextView
            android:id="@+id/timer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_timer_text"
            android:textSize="@dimen/text_size_big"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

    </FrameLayout>


    <RelativeLayout
        android:id="@+id/timer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/app_padding"
        android:clipToPadding="false"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:textAllCaps="false"
            android:text="@string/reset_timer"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/fab_desc"
            android:textColor="@android:color/white"
            android:text="@string/start_timer"
            app:iconTint="@android:color/white"
            app:icon="@drawable/ic_outline_play_arrow_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:text="@string/add_timer"/>

    </RelativeLayout>

</RelativeLayout>